--- a/contato.html
+++ b/contato.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div><a href="inicio.html">Início</a>
+    <div><a href="index.html">Início</a>
         <a href="sobre.html">sobre</a>
     </div>
 
