--- a/sobre.html
+++ b/sobre.html
@@ -10,7 +10,7 @@
 
 <body class="fundo">
     <h1 class="titulo">Sobre mim </h1>
-    <a href="inicio.html">Início</a>
+    <a href="index.html">Início</a>
     <hr>
 
     <h2> Futura Dev. </h2>
